# secapp

./: Cargo.toml  IDEA.md  LICENSE.md  README.md  TODO.md
docs/: architecture.mdx  cli.mdx  configuration.mdx  getting-started.mdx  index.mdx
marketing/: .gitignore  README.md  bunfig.toml  next.config.mjs  package.json  source.config.ts  tsconfig.json  vercel.json
marketing/app/: globals.css  layout.tsx  page.tsx
marketing/app/(content)/: layout.tsx
marketing/app/(content)/docs/[[...slug]]/: page.tsx
marketing/app/(content)/info/ideas/: page.tsx
marketing/app/(content)/info/roadmap/: page.tsx
marketing/app/(content)/legal/agreements/: page.tsx
marketing/app/(content)/legal/license/: page.tsx
marketing/app/(content)/legal/privacy/: page.tsx
marketing/app/(content)/legal/terms/: page.tsx
marketing/app/(home)/: layout.tsx
marketing/app/docs/[[...slug]]/: page.tsx
marketing/app/info/ideas/: page.tsx
marketing/app/info/roadmap/: page.tsx
marketing/app/legal/agreements/: page.tsx
marketing/app/legal/license/: page.tsx
marketing/app/legal/privacy/: page.tsx
marketing/app/legal/subprocessors/: page.tsx
marketing/app/legal/terms/: page.tsx
marketing/components/: content-page.tsx  mdx-components.tsx  render-markdown.tsx  site-footer.tsx  site-header.tsx
marketing/content/legal/: agreements.md  privacy.md  subprocessors.md  terms.md
marketing/info/: IDEA.md
marketing/lib/: content.ts  page-tree.ts
src/: main.rs
src/config/: mod.rs
src/crypto/: mod.rs
src/daemon/: interceptor.rs  mod.rs
src/db/: mod.rs
src/tui/: app.rs  mod.rs
(+1 files in other folders)
